home screen changed. upload file changed